v0.1:

+ Added Byzantine Co-Emperor event
+ Added Serbian to Prilep's accepted cultures to reflect that Prilep was born out of the Serbian Empire
+ Added FES (Thessalonica)

* Reworked some Epirote lore and country history
* Nerf to province 379 (Jerusalem) dev: 30 -> 23
* Nerf to province 1854 (Jaffa) dev: 22 -> 19
* Nerf to province 358 (Alexandria) dev: 21 -> 16
* Buff to province 151 (Constantinople) dev: 31 -> 35
* Nerf to province 4317 (Temenhor) dev: 24 -> 19 
* Nerf to province 4316 (Sagsic) dev: 24 -> 19


v0.0.6:

! This update doesn't have much in it, I mostly needed to fix a bug with the Konstantinos XI events

+ Added unique Rumi government reform

* Fixed Konstantinos XI event chain firing too much. My bad.
* Changed the Reform Bulgarian Empire decision's requirements because apparently you can't change highlighted provinces based on the nation looking at the decision aahhhhh
* Gave province 357 (Darnah) to Ifriqiya

v0.0.5:

+++ Added event chain centered around Konstantinos, heir apparent to the Byzantine Empire!

+ Added institutions file for future use
+ Added ruler for Cilicia (Undead)
+ Added previous rulers for Jerusalem (Undead)
+ Added "Sultanante Min Omar" government reform for the Rahulids
+ Added Ruler Modifier "Uthman's Tolerance" to Uthman Rahulid
+ Added option to "Settlers in the Desert" event that does not create a colony 
+ Added additional triggers to "Raid in [Province]" event to improve usability

* Changed highlighted provinces in the "Proclaim a New Bulgarian Empire" decision
* The "Pillage the city! Leave no heathen unscathed!" option of the "Capture of xyz" event now converts culture
* Halved autonomy gain from Foreign Quarter
* Added ai_importance and fixed up the ai_will_do blocks for decisions. Not sure how much of a difference it'll make, but we'll see.
* New Cyprus ideas loc, courtesy of UndeadWizard
* Made Rahulids Shia to reflect new lore
* Made Mamluk Sultan younger
* Made Rahulid a zealot and cruel