@@ -34,6 +34,8 @@ damietta_byzantine_reform_1 = {
 
 }
 
+#Tier 3
+
 ############################################
 #Crusader States
 ############################################
